--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <druid.version>1.1.0</druid.version>
         <mybatis.version>1.3.2</mybatis.version>
         <userAgent>1.21</userAgent>
+        <lombok.version>1.18.12</lombok.version>
     </properties>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -87,6 +88,11 @@
                 <groupId>eu.bitwalker</groupId>
                 <artifactId>UserAgentUtils</artifactId>
                 <version>${userAgent}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
