--- a/mall-user/src/main/resources/bootstrap.properties
+++ b/mall-user/src/main/resources/bootstrap.properties
@@ -42,3 +42,7 @@ log4j.appender.stdout.layout.ConversionPattern =  %d{ABSOLUTE} ===== %5p %c{ 1 }
 #log4j.appender.D.Threshold = ERROR ## 只输出ERROR级别以上的日志!!!
 #log4j.appender.D.layout = org.apache.log4j.PatternLayout
 #log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+
+#redis-cluster
+redis.cluster.hostports = 192.168.10.131:6371,192.168.10.132:6371,192.168.10.133:6371,192.168.10.135:6371,192.168.10.136:6371,192.168.10.137:6371
+redis.cluster.passwrod = 123456
