--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,11 @@
         <springboot.version>2.2.5.RELEASE</springboot.version>
         <commons-lang3.version>3.5</commons-lang3.version>
         <bok.versionlom>1.18.12</bok.versionlom>
-        <druid.version>1.1.0</druid.version>
+        <druid.version>1.2.6</druid.version>
         <mybatis.version>1.3.2</mybatis.version>
         <userAgent>1.21</userAgent>
         <lombok.version>1.18.12</lombok.version>
+        <jedis.version>4.3.0</jedis.version>
     </properties>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -93,6 +94,12 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
