--- a/mall-goods/pom.xml
+++ b/mall-goods/pom.xml
@@ -66,6 +66,17 @@
             <artifactId>jedis</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <!--springboot2以后默认使用lettuce客户端工具，可以手动去除并使用之前默认的jedis客户端工具-->
+            <exclusions>
+                <exclusion>
+                    <groupId>io.lettuce</groupId>
+                    <artifactId>lettuce-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
     </dependencies>
 
