--- a/mall-user/pom.xml
+++ b/mall-user/pom.xml
@@ -59,6 +59,7 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
+            <version>4.3.0</version>
         </dependency>
     </dependencies>
 
