防止缓存击穿-单机版布隆过滤器-基于Guava工具包实现

--- a/mall-goods/pom.xml
+++ b/mall-goods/pom.xml
@@ -78,6 +78,10 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
